<resources>
    <string name="app_name">Облако 53</string>
    <string name="guest">Гость</string>
    <string name="discount">Ваша скидка по карте:</string>
    <string name="go_to_profile">Перейти в профиль</string>
    <string name="menu_string">Меню</string>
    <string name="deal_string">Акции</string>
    <string name="card_string">Карта</string>
    <string name="parking_string">Парковка</string>
    <string name="hookah">Кальян</string>
    <string name="next_string">Далее</string>
    <string name="free_parking_string">Паркуй авто \n бесплатно</string>
    <string name="deals_string">Будь в курсе \nсобытий</string>
    <string name="enjoy_moment_string">И наслаждайся \nмоментом</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="enter">Войти.</string>
    <string name="register_string">Зарегистрироваться</string>
    <string name="continue_string">Продолжить</string>
    <string name="phone_number_string">Номер телефона</string>
    <string name="enter_telephone_mail_string">Укажите свой телефон и почту</string>
    <string name="enter_password_string">Введите пароль</string>
    <string name="min_6_symbols_string">Минимум 6 символов</string>
    <string name="authorisation_string">Авторизация</string>
    <string name="mail_string">Почта</string>
    <string name="password_string">Пароль</string>
    <string name="forgot_password_string">Забыли пароль?</string>
    <string name="free_parking_at_territory">Бесплатная парковка на территории\n заведения</string>
    <string name="free_parking">Бесплатная парковка</string>
    <string name="order_parking_string">Заказать парковку</string>
    <string name="support_string"><u>Служба поддержки</u></string>
    <string name="name_surname_string">Имя и Фамилия</string>
    <string name="name_and_surname_hint">Иван Иванов</string>
    <string name="cur_number_string">Номер машины</string>
    <string name="cur_number_hint_string">В666АД777</string>
    <string name="phone_hint_string">89152555341</string>
    <string name="created_by_string">Разработано компанией OAK Moscow</string>
    <string name="parking_order_complete_string">Спасибо! В ближайшее время вам\n сообщат об успешной парковке авто</string>
    <string name="deal_description_string">Описание акции</string>
    <string name="deal_name_string">Название акции</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="hello">Здравствуйте!</string>
    <string name="ur_cart">Ваша карта гостя</string>

    <string name="contacts">Контакты</string>
    <string name="pizza">Пицца</string>
    <string name="desserts">Десерты</string>
    <string name="japanese_kitchen">Японская кухня</string>
    <string name="beverages">Напитки</string>
    <string name="snacks">Закуски</string>
    <string name="bar">Бар</string>
    <string name="coctails">Коктейли</string>
    <string name="guest_card">Накопительная карта гостя</string>
    <string name="card_info1">1. Данная карта дает вам право получать скидку в нашем заведение</string>
    <string name="card_info2">2. Размер скидки зависит от того насколько часто вы у нас отдыхаете.
        Изначально ваша скидка составляет 3% (20000р-5%,50000р- 7%, 100000р-10%, 150000р-15%)</string>
    <string name="card_info3">3. Для получения скидки покажите свою карту в нашем приложение</string>
    <string name="card_info4">4. Как пополнить или узнать текущий баланс карты спрашивайте у сотрудников нашего заведения</string>
    <string name="telephone">Телефон</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="authed">authed</string>
    <string name="first_run">firstrun</string>
    <string name="enter_mail">Укажите почту</string>
    <string name="enter_password">Укажите пароль</string>
    <string name="enter_all_fields">Заполните все поля</string>
    <string name="incorrect_mail">Почта введена некорректно</string>
    <string name="authorisation_error">Ошибка авторизации\n Повторите попытку позднее</string>
    <string name="phone">phone</string>
    <string name="mail">mail</string>
    <string name="incorrect_telephone">Телефон введен некорректно</string>
    <string name="short_password">Пароль слишком короткий</string>

    <string name="hookah_contacts">Адрес: Ломоносовский\n проспект 25к5\n Номер: 8 (966) 089–53–53\n inst: oblako53_university\n Сайт: www.oblako53mgu.com</string>

    <string name="network_error">Проблемы с интернет-соединением</string>
    <string name="no_items">Нет акций</string>
    <string name="exit">Выйти из аккаунта</string>
</resources>
