<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:layout_marginStart="20dp"
        android:text="@string/enter_password_string"
        android:textSize="32sp"
        android:textColor="@color/textColour"
        android:layout_marginEnd="127dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_edit"/>

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="325dp"
        android:textSize="18sp"
        android:hint="@string/min_6_symbols_string"
        android:textColorHint="@color/textColour"
        android:textColor="@color/textColour"
        app:layout_constraintBottom_toTopOf="@id/continue_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/continue_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="81dp"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="18dp"
        android:background="@color/textColour"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/continue_string"
        android:textColor="@color/darkTextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>