<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_root_screen"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/card_fragment_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:textColor="@color/textColour"
        android:text="@string/ur_cart"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_fragment_card"
        android:layout_width="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_fragment_text1"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="121dp"
            android:layout_height="94dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/logo_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/card_fragment_info"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="12dp"
            android:padding="7dp"
            android:background="@drawable/question_mark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/card_fragment_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="22dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/textColour"
        android:background="@drawable/card_rectangle_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_fragment_card"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/created_by_string"
        android:textColor="@color/textColour"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_fragment_card_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:paddingBottom="57dp"
        android:background="@color/card_pop_up_background">
        <TextView
            android:id="@+id/card_fragment_popup_text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:text="@string/guest_card"
            android:textSize="24sp"
            android:textColor="@color/textColour"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/card_fragment_popup_text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/textColour"
            android:text="@string/card_info1"
            android:layout_marginTop="12dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_fragment_popup_text1"/>

        <TextView
            android:id="@+id/card_fragment_popup_text3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/textColour"
            android:text="@string/card_info2"
            android:layout_marginTop="8dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_fragment_popup_text2"/>

        <TextView
            android:id="@+id/card_fragment_popup_text4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/textColour"
            android:text="@string/card_info3"
            android:layout_marginTop="8dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_fragment_popup_text3"/>

        <TextView
            android:id="@+id/card_fragment_popup_text5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/textColour"
            android:text="@string/card_info4"
            android:layout_marginTop="8dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_fragment_popup_text4"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>