<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">
    <TextView
        android:id="@+id/name"
        android:layout_width="175dp"
        android:layout_height="29dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="28dp"
        android:text="@string/guest"
        android:gravity="top"
        android:textColor="@color/textColour"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="67dp"
        android:id="@+id/avatar_pic"
        android:layout_marginTop="35dp"
        android:background="@drawable/ic_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/discount"
        android:layout_width="175dp"
        android:layout_height="17dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="9dp"
        android:layout_marginStart="28dp"
        android:text="@string/discount"
        android:gravity="top"
        android:textColor="@color/textColour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"/>


    <TextView
        android:id="@+id/profile_link"
        android:layout_width="175dp"
        android:layout_height="17dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="9dp"
        android:layout_marginStart="28dp"
        android:text="@string/go_to_profile"
        android:gravity="top"
        android:textColor="@color/textColour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discount"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/profile_link"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>