<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/authorisation_layout">

    <ProgressBar
        android:id="@+id/acivity_authorisation_progress_bar"
        style="@android:style/Widget.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/authorise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/authorisation_string"
        android:textSize="32sp"
        android:textColor="@color/textColour"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/arrow_back_authorisation"
        android:layout_width="15dp"
        android:layout_height="30dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mail_edit_enter_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/mail_string"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/textColour"
        android:textColorHint="@color/hintTextColour"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorise" />

    <EditText
        android:id="@+id/password_edit_enter_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="32dp"
        android:singleLine="true"
        android:hint="@string/password_string"
        android:textColorHint="@color/hintTextColour"
        android:textColor="@color/textColour"
        android:textSize="18sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/mail_edit_enter_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/authorisation_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="68.5dp"
        android:background="@drawable/onboarding_rectangle"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:paddingTop="18dp"
        android:paddingBottom="15dp"
        android:text="@string/continue_string"
        android:textColor="@color/darkTextColor"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/password_edit_enter_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>