<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_4_background">
    <TextView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="81dp"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="18dp"
        android:background="@color/textColour"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/register_string"
        android:textColor="@color/darkTextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="257dp"
        android:background="@drawable/logo_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_onboarding_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="@color/darkTextColor"
        android:textSize="14sp"
        android:gravity=""
        android:layout_marginStart="105dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textColor="@color/red_text"
        android:textSize="14sp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="101dp"
        android:layout_marginStart="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/already_have_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>